--- a/NO Sidebar.html
+++ b/NO Sidebar.html
@@ -49,7 +49,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">Helios</a></li>
+								<li><a href="no-sidebar.html">NO Sidebar</a></li>
 							</ul>
 						</nav>
 
