--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Helios</a></h1>
+								<h1><a href="index.html" id="logo">Privacy Policy</a></h1>
 							</header>
 						</div>
 
@@ -49,7 +49,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">NO Sidebar</a></li>
+								<li><a href="no-sidebar.html">Privacy Policy</a></li>
 							</ul>
 						</nav>
 
