--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -49,7 +49,7 @@
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">Privacy Policy</a></li>
+								<li><a href="no-sidebar.html">no sidebar</a></li>
 							</ul>
 						</nav>
 
